fixed scrollbar appearing initially + added scrolling to bottom on overflow

--- a/frontend/mongo-web-shell.css
+++ b/frontend/mongo-web-shell.css
@@ -21,7 +21,7 @@
   list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
-  height: 560px;
+  height: 550px;
   padding-left: 20px
 }
 
